Fixing some border alignment

--- a/src/client/media/mobile/css/opinionspace.css
+++ b/src/client/media/mobile/css/opinionspace.css
@@ -717,6 +717,7 @@ table.pretty caption {
     line-height: 20px;
     width: 95%;
     color: #4e300f;
+    padding-left: 3px;
 }
 
 .basic-header {
